<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Are you sure?"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/tvMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/msg"
        android:textSize="16sp"
        android:textColor="#212121"
        android:padding="2dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnYes"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent1"
            android:gravity="center"
            android:text="@string/yes"
            android:textSize="16sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnNo"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent1"
            android:gravity="center"
            android:text="@string/no"
            android:textSize="16sp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>