<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".BMIActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarBMI"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/white" />

    <RadioGroup
        android:id="@+id/rgUnits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbarBMI"
        android:layout_margin="10dp"
        android:background="@drawable/drawable_radio_group_background"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbMetricUnits"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="0.50"
            android:background="@drawable/drawable_units_tab_selector"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/metric_units"
            android:textColor="@drawable/drawable_units_tab_text_color_selector"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbUsUnits"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="0.50"
            android:background="@drawable/drawable_units_tab_selector"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:text="@string/us_units"
            android:textColor="@drawable/drawable_units_tab_text_color_selector"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilMetricUnitWeight"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rgUnits"
        android:layout_margin="10dp"
        app:boxStrokeColor="@color/colorAccent1"
        app:hintTextColor="@color/colorAccent1">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etMetricUnitWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight_in_kg"
            android:inputType="numberDecimal"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilMetricUnitHeight"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilMetricUnitWeight"
        android:layout_margin="10dp"
        app:boxStrokeColor="@color/colorAccent1"
        app:hintTextColor="@color/colorAccent1">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etMetricUnitHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/height_in_cm"
            android:inputType="numberDecimal"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUsMetricUnitWeight"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rgUnits"
        android:layout_margin="10dp"
        app:boxStrokeColor="@color/colorAccent1"
        app:hintTextColor="@color/colorAccent1">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etUsMetricUnitWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight_in_pounds"
            android:inputType="numberDecimal"
            android:textSize="16sp"
            tools:ignore="DuplicateClickableBoundsCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_below="@id/rgUnits"
        android:layout_centerHorizontal="true" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUsUnitHeightFeet"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilMetricUnitWeight"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:layout_toStartOf="@+id/view"
        android:visibility="gone"
        app:boxStrokeColor="@color/colorAccent1"
        app:hintTextColor="@color/colorAccent1"
        tools:visibility="visible">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etUsUnitHeightFeet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/feet"
            android:inputType="numberDecimal"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUsUnitHeightInch"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilMetricUnitWeight"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/view"
        android:visibility="gone"
        app:boxStrokeColor="@color/colorAccent1"
        app:hintTextColor="@color/colorAccent1"
        tools:visibility="visible">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etUsUnitHeightInch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inch"
            android:inputType="numberDecimal"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:id="@+id/llDisplayBMiResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tilMetricUnitHeight"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="invisible"
        tools:visibility="visible">

        <TextView
            android:id="@+id/tvYourBMI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/your_bmi"
            android:textAllCaps="true"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvBMIValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="20.00" />

        <TextView
            android:id="@+id/tvBMIType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textSize="18sp"
            tools:text="Normal" />

        <TextView
            android:id="@+id/tvBMIDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textSize="18sp"
            tools:text="Hello baccho" />

    </LinearLayout>

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llDisplayBMiResult"
        android:layout_gravity="bottom"
        android:layout_margin="10dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/colorAccent1"
        android:text="@string/calculate"
        android:textColor="@color/white"
        android:textSize="18sp" />

</RelativeLayout>